--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>그랑사가 - 유나</title>
+    <title>그랑사가 정령왕의 시련 관리</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
